welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:10: error: type mismatch;
 found   : Double
 required: Int
	return (  0.5  *(a + b - Math.abs(b - a)));
                       ^